argocd-applicationset-nginx-deployment/app/nginx/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: prod-nginx
spec:
  rules:
  - host: prod-nginx.fgn.nerdystar.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-nginx-service
            port:
              number: 80
